--- a/src/SchedulingWebMobileApi.IoC/SchedulingWebMobileApi.IoC.csproj
+++ b/src/SchedulingWebMobileApi.IoC/SchedulingWebMobileApi.IoC.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.1.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.1.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.0.0" />
     <PackageReference Include="MySqlConnector" Version="0.43.0" />
@@ -13,6 +14,12 @@
   <ItemGroup>
     <ProjectReference Include="..\SchedulingWebMobileApi.Application\SchedulingWebMobileApi.Application.csproj" />
     <ProjectReference Include="..\SchedulingWebMobileApi.Core\SchedulingWebMobileApi.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Microsoft.AspNetCore.Http">
+      <HintPath>..\..\..\..\..\..\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.aspnetcore.http\2.0.1\lib\netstandard2.0\Microsoft.AspNetCore.Http.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
